# oseias_desafio_elite_dev_ia

./: .dockerignore  .flake8  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
api/: .dockerignore  index.py  models.py  pyproject.toml  requirements.txt
api/services/: __init__.py  calendar_service.py  openai_service.py  pipefy_service.py
backend/: Dockerfile  calendar.json  create_assistant.py  main.py  models.py  pyproject.toml  requirements.txt  services.py  test_pipefy.py
backend/services/: calendar_service.py  openai_service.py  pipefy_service.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
