[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "oseiasdfarias",email = "oseias.dfarias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
annotated-doc = "^0.0.3"
annotated-types = "^0.7.0"
anyio = "^4.11.0"
certifi = "^2025.10.5"
click = "^8.3.0"
distro = "^1.9.0"
dnspython = "^2.8.0"
email-validator = "^2.3.0"
fastapi = "^0.120.2"
h11 = "^0.16.0"
hiredis = "^3.3.0"
httpcore = "^1.0.9"
httpx = "^0.28.1"
idna = "^3.11"
jiter = "^0.11.1"
openai = "^2.6.1"
pydantic = "^2.12.3"
pydantic-core = "^2.41.4"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.2.1"
redis = "^7.0.1"
six = "^1.17.0"
sniffio = "^1.3.1"
starlette = "^0.49.1"
tqdm = "^4.67.1"
typing-inspection = "^0.4.2"
typing-extensions = "^4.15.0"
uvicorn = "^0.38.0"

